--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.8",
     "-": "^0.0.1",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "react-player": "^2.13.0"
+    "react-player": "^2.13.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20",
