--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "-": "^0.0.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
